--- a/index.html
+++ b/index.html
@@ -273,23 +273,23 @@
                 <p class="news-date">2025</p>
                 <ul>
                   <li>[1]TEMP</li>
-                  <li>[Apr.] Prof. Choo has been selected as a recipient of the Outstanding Young Scientist Grant (우수신진연구) from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
+                  <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
+                  <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
+                  <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <b>TVLSI</b>!</li>                           
                 </ul>
                 <p class="news-date">2024</p>
                 <ul>
-                  <li>[1]TEMP</li>
-                  <li>[2]TEMP</li>
-                  <li>[Apr.] Prof. Choo has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>                  
+                  <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <b>TCAS-I</b>!</li>
+                  <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <b>TCAS-II</b>!</li>                                    
+                  <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>                  
                 </ul>  
                 <p class="news-date">2023</p>
                 <ul>
-                  <li>[1]TEMP</li>
-                  <li>[2]TEMP</li>
+                  <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> served IEEE CASS Student Design Contesst award!</li>
                 </ul>
                 <p class="news-date">2022</p>
                 <ul>
-                  <li>[2]TEMP</li>                  
-                  <li>[Mar.] Prof. Choo has been appointed Hanyang University!</li>
+                  <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
                 </ul>                                              
               </li>
             </ul> 
