--- a/index.html
+++ b/index.html
@@ -273,16 +273,20 @@
                 <hr />
                 <p class="news-date">2025</p>
                 <ul>
-                  <li>[1]TEMP</li>
+                  <li>[Aug.] Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                  <li>[Aug.] Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                  <li>[Jun.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>JSSC</b></u>!</li>
                   <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
                   <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
-                  <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <b>TVLSI</b>!</li>                           
+                  <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <b>TVLSI</b>!</li>
                 </ul>
                 <hr />
                 <p class="news-date">2024</p>
                 <ul>
                   <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <b>TCAS-I</b>!</li>
                   <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <b>TCAS-II</b>!</li>                                    
+                  <li>[Aug.] Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b>, Novemver 18-21, 2024, in Hiroshima, Japan!</li>
+                  <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <b>TCAS-II</b>!</li>                                    
                   <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>                  
                 </ul> 
                 <hr /> 
