--- a/index.html
+++ b/index.html
@@ -301,10 +301,23 @@
                   <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been served <b>IEEE CASS Student Design Contest award!</b></li>
                 </ul>
                 <hr />
-                <p class="news-date">2022</p>
+            <div class="accordion">
+              <h3 class="h3-items" id="2022">2022</h3>   
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-info">
+                      <p><span>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>                         
+                <!--<p class="news-date">2022</p>
                 <ul>
                   <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
-                </ul>                                              
+                </ul>-->
+                
+              </div>
               </li>
             </ul> 
             <hr />
