--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                   <div class="user-card">
                     <div class="user-card-info">
                       <p><span>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</span></p>
+                      <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
                     </div>
                   </div>
                 </div>
