--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-info">
-                      <p><span>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</span></p>
+                      <p style="text-align: left;"><span>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</span></p>
                     </div>
                   </div>
                 </div>
