--- a/index.html
+++ b/index.html
@@ -308,6 +308,9 @@
                   <div class="user-card">
                     <div class="user-card-info">
                       <p style="text-align: left;"><span>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</span></p>
+                      <ul>
+                        <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
