--- a/index.html
+++ b/index.html
@@ -286,15 +286,23 @@
                   <li>[Jan.] <b>Sang-Hyeon Ok</b> has been served <b>ICEIC 2025 Best Paper Award (Silver Prize)</b> Congrat!</li>
                 </ul>
                 <hr />
-                <p class="news-date">2024</p>
-                <ul>
-                  <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!</li>
-                  <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>                                    
-                  <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!</li>
-                  <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>
-                  <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
-                  <li>[Jan.] <b>Dong-Hoe Heo</b> has been served <b>ICEIC 2024 Best Paper Award (Gold Prize)</b> Congrat!</li>
-                </ul> 
+            <div class="accordion">
+              <h3 class="h3-items" id="2022">2022</h3>   
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <ul>
+                    <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!</li>
+                    <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>                                    
+                    <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!</li>
+                    <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>
+                    <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
+                    <li>[Jan.] <b>Dong-Hoe Heo</b> has been served <b>ICEIC 2024 Best Paper Award (Gold Prize)</b> Congrat!</li>
+                    </ul> 
+                  </div>
+                </div>
+              </div>                         
+            </div>                
                 <hr /> 
                 <p class="news-date">2023</p>
                 <ul>
@@ -312,16 +320,15 @@
                   </div>
                 </div>
               </div>                         
+            </div>
+              </li>
+            </ul> 
+            <hr />
                 <!--<p class="news-date">2022</p>
                 <ul>
                   <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
                 </ul>-->
                 
-              </div>
-              </li>
-            </ul> 
-            <hr />
-
             <div class="gallery-title-row">
               <h5>Award</h5>
               <a href="news_gallery.html">
