--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </ul>
                 <hr />
             <div class="accordion">
-              <h3 class="h3-items" id="2022">2022</h3>   
+              <h3 class="h3-items" id="2024">2024</h3>   
               <div>
                 <div class="wrapper">
                   <div class="user-card">
@@ -304,10 +304,18 @@
               </div>                         
             </div>                
                 <hr /> 
-                <p class="news-date">2023</p>
-                <ul>
-                  <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been served <b>IEEE CASS Student Design Contest award!</b></li>
-                </ul>
+            <div class="accordion">
+              <h3 class="h3-items" id="2023">2023</h3>   
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <ul>
+                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been served <b>IEEE CASS Student Design Contest award!</b></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>                         
+            </div>                        
                 <hr />
             <div class="accordion">
               <h3 class="h3-items" id="2022">2022</h3>   
