--- a/index.html
+++ b/index.html
@@ -271,20 +271,28 @@
             <ul class="news-ul">
               <li>
                 <hr />
-                <p class="news-date">2025</p>
-                <ul>
-                  <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been served <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
-                  <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been served <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
-                  <li>[Sep.] <b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed Transmitter</li>
-                  <li>[Sep.] <b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
-                  <li>[Aug.] Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                  <li>[Aug.] Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                  <li>[Jun.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!</li>
-                  <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
-                  <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
-                  <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!</li>
-                  <li>[Jan.] <b>Sang-Hyeon Ok</b> has been served <b>ICEIC 2025 Best Paper Award (Silver Prize)</b> Congrat!</li>
-                </ul>
+            <div class="accordion">
+              <h3 class="h3-items" id="2024">2024</h3>   
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                   <ul>
+                      <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been served <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
+                      <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been served <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
+                      <li>[Sep.] <b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed Transmitter</li>
+                      <li>[Sep.] <b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
+                      <li>[Aug.] Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                      <li>[Aug.] Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                      <li>[Jun.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!</li>
+                      <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
+                      <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
+                      <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!</li>
+                      <li>[Jan.] <b>Sang-Hyeon Ok</b> has been served <b>ICEIC 2025 Best Paper Award (Silver Prize)</b> Congrat!</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>                         
+            </div>                  
                 <hr />
             <div class="accordion">
               <h3 class="h3-items" id="2024">2024</h3>   
