--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
           <div class="col-12 col-lg-4 section-heading">
             <h1>News</h1>
           </div>
-          <div class="col-12 col-lg-10">
+          <div class="col-12 col-lg-10 mx-auto">
 
             <h5>Timeline</h5>
             <ul class="news-ul">
               <li>
                 <hr />
             <div class="accordion">
-              <h3 class="h3-items" id="2024">2024</h3>   
+              <h3 class="h3-items" id="2025">2025</h3>   
               <div>
                 <div class="wrapper">
                   <div class="user-card">
