--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                 <div class="wrapper">
                   <div class="user-card">
                    <ul>
-                      <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been served <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
-                      <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been served <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
+                      <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
+                      <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
                       <li>[Sep.] <b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed Transmitter</li>
                       <li>[Sep.] <b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
                       <li>[Aug.] Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
@@ -553,15 +553,7 @@
                 <p>PI-based CDR</p>
                 <p>June (28-nm T)'24</p>
               </div>
-              <div class="chip-item">
-                <img
-                  data-bs-toggle="modal"
-                  data-bs-target="#Modal4"
-                  src="img/TI SAR ADC.png"
-                />
-                <p>TI SAR ADC</p>
-                <p>June (28-nm T)'24</p>
-              </div>
+
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
