--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                       <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
                       <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
                       <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!</li>
-                      <li>[Jan.] <b>Sang-Hyeon Ok</b> has been served <b>ICEIC 2025 Best Paper Award (Silver Prize)</b> Congrat!</li>
+                      <li>[Jan.] <b>Sang-Hyeon Ok</b> has been awarded <b>ICEIC 2025 Best Paper Award (Silver Prize)</b> Congrat!</li>
                     </ul>
                   </div>
                 </div>
@@ -305,7 +305,7 @@
                     <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!</li>
                     <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>
                     <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
-                    <li>[Jan.] <b>Dong-Hoe Heo</b> has been served <b>ICEIC 2024 Best Paper Award (Gold Prize)</b> Congrat!</li>
+                    <li>[Jan.] <b>Dong-Hoe Heo</b> has been awarded <b>ICEIC 2024 Best Paper Award (Gold Prize)</b> Congrat!</li>
                     </ul> 
                   </div>
                 </div>
@@ -318,7 +318,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <ul>
-                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been served <b>IEEE CASS Student Design Contest award!</b></li>
+                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been awarded <b>IEEE CASS Student Design Contest award!</b></li>
                     </ul>
                   </div>
                 </div>
