--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <ul>
-                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> has been awarded <b>IEEE CASS Student Design Contest award!</b></li>
+                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CASS Student Design Contest award!</b></li>
                     </ul>
                   </div>
                 </div>
