--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -122,7 +122,88 @@
       <div class="row">
         <h2>Chip Gallery</h2>
 
-                <div class="col-12 col-lg-3">
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/ANA_RX_25Sep.png"
+              class="card-img-top"
+              alt="High-Speed PAM-4 Receiver"
+            />
+            <div class="card-body">
+              <h5 class="card-title">High-Speed PAM-4 Receiver</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Sep. (28-nm T)'25</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Seung-Hwan Gong</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>    
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/DSP_TX_25Sep.png"
+              class="card-img-top"
+              alt="High-Speed Transmitter"
+            />
+            <div class="card-body">
+              <h5 class="card-title">High-Speed Transmitter</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Sep. (28-nm T)'25</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Dong-Ho Kim and Seung-Mo Jin</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>        
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/DSP_RX_25Jul.png"
+              class="card-img-top"
+              alt="DSP-based High-Speed Receiver"
+            />
+            <div class="card-body">
+              <h5 class="card-title">DSP-based High-Speed Receiver</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Jul. (28-nm T)'25</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Jae-Geon Lee</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
               src="img/chip_new/PICDR_25.png"
