--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                    <ul>
+                      <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat!</li>                  
                       <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
                       <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
                       <li>[Sep.] <b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed Transmitter</li>
