--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@
                     <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>
                     <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
                     <li>[Jan.] <b>Dong-Hoe Heo</b> has been awarded <b>2024 ICEIC Best Paper Award (Gold Prize)</b> Congrat!</li>
+                    <li>[Jan.] <b>Prof. Choo</b> has served as the Conference Secretary Chair at 2024 ICEIC</li>
+                    <li>[Jan.] <b>Prof. Choo</b> has served as the Session Chair at 2024 ASP-DAC</li>
                     </ul> 
                   </div>
                 </div>
@@ -333,6 +335,7 @@
                   <div class="user-card">
                     <ul>
                       <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CASS Student Design Contest award!</b></li>
+                      <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
                     </ul>
                   </div>
                 </div>
