--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,7 @@
                       <p><span> Shin-Uk Kang (Ph.D. @ KAIST)</span></p>
                       <p><span> Ji-Ho Kim (4Lynx)</span></p>
                       <p><span> Kyu-Ran Park (LX semicon)</span></p>
+                      <p><span> Kang-Min Kim (SUGARS)</span></p>
                       <p><span> Dong-Hoe Heo (ram-sCHIP)</span></p>
                     </div>
                   </div>
