--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
                    <ul>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
                       <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat!</li>
+                      <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award!</b></li>
+                      <li>[Oct.] <b>Seung-Hwan Gong</b> has been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
+                      <li>[Oct.] <b>Dong-Hoe Heo</b> and <b>Seung-Hwan Gong</b> have been awarded <b>ISOCC 2025 Chip Design Contest Special Prize!</b></li>
+                      <li>[Oct.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 APCCAS</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ISOCC</li>
                       <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
