--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
               <a class="nav-link" href="#news-gallery">News</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#Photo-gallery">Photo</a>
+            </li>            
+            <li class="nav-item">
               <a class="nav-link" href="#research">Research</a>
             </li>
             <li class="nav-item">
@@ -383,6 +386,34 @@
               </a>
             </div>
             <div class="news-gallery-items gallery-card-container"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="photo-gallery" class="home-section wg-blank">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-4 section-heading">
+            <h1>Photo</h1>
+          </div>
+          <div class="col-12 col-lg-10 mx-auto">             
+            <div class="gallery-title-row">
+              <a href="photo_gallery.html">
+                <span> Click for more details</span>
+                <button class="btn btn-primary btn-rotate">
+                  <svg
+                    class="plus-icon"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="4 4 16 16"
+                  >
+                    <rect x="11" y="4" width="2" height="16" rx="1" ry="1" />
+                    <rect x="4" y="11" width="16" height="2" rx="1" ry="1" />
+                  </svg>
+                </button>
+              </a>
+            </div>
+            <div class="photo-gallery-items gallery-card-container"></div>
           </div>
         </div>
       </div>
