--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -97,6 +97,9 @@
               <a class="nav-link" href="index.html#news-gallery">News</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link active" href="index.html#photo-gallery">Photo</a>
+            </li>                        
+            <li class="nav-item">
               <a class="nav-link active" href="index.html#research">Research</a>
             </li>
             <li class="nav-item">
