--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <a class="nav-link" href="#news-gallery">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Photo-gallery">Photo</a>
+              <a class="nav-link" href="#photo-gallery">Photo</a>
             </li>            
             <li class="nav-item">
               <a class="nav-link" href="#research">Research</a>
@@ -399,6 +399,7 @@
           </div>
           <div class="col-12 col-lg-10 mx-auto">             
             <div class="gallery-title-row">
+
               <a href="photo_gallery.html">
                 <span> Click for more details</span>
                 <button class="btn btn-primary btn-rotate">
