--- a/news_gallery.html
+++ b/news_gallery.html
@@ -94,6 +94,9 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="index.html#photo-gallery">Photo</a>
+            </li>                        
+            <li class="nav-item">
               <a class="nav-link active" href="index.html#news-gallery">News</a>
             </li>
             <li class="nav-item">
