--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -123,7 +123,7 @@
 
     <div class="container gallery-detail">
       <div class="row">
-        <h2>News Gallery</h2>
+        <h2>Photo Gallery</h2>
       </div>
     </div>
 
