--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </button>
               </a>
             </div>
-            <div class="photo-gallery-items gallery-card-container"></div>
+            <div class="news-gallery-items gallery-card-container"></div>
           </div>
         </div>
       </div>
