--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </button>
               </a>
             </div>
-            <div class="news-gallery-items gallery-card-container"></div>
+            <div class="photo-gallery-items photo-card-container"></div>
           </div>
         </div>
       </div>
@@ -1302,6 +1302,7 @@
     <!-- Custom js -->
     <script src="js/publication.js"></script>
     <script src="js/update_award.js"></script>
+    <script src="js/update_photo.js"></script>    
     <script src="js/research_projects.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/script.js"></script>
