--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
 
             <h5 class="in-media-item">
               <a
+                href="https://www.newshyu.com/news/articleView.html?idxno=1021190"
+              >
+                "추민성 교수, '반도체의 날' 기념식서 한국 반도체협회장상 수상"</a
+              >
+            </h5>
+
+            <h5 class="in-media-item">
+              <a
                 href="https://www.idec.or.kr/vod/apply/view/?&no=365"
               >
                 "IDEC 고속 칩렛향 디지털 인터페이스 회로 설계 강좌"</a
