--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                   <div class="user-card">
                    <ul>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "High-Speed Interface Circuit Design" at the University of Seoul</li>
-                      <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon</li>
+                      <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon with <b>Seung-Hwan Gong, Jae-Geon Lee, Seung-Mo Jin, and Dong-Ho Kim</b></li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
                       <li>[Oct.] We hosted an invited seminar by <b>Prof. Seung-Hyeon Moon</b> on "Two Challenges in AI Accelerators"</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
