--- a/index.html
+++ b/index.html
@@ -437,6 +437,14 @@
 
             <h5 class="in-media-item">
               <a
+                href="https://www.newshyu.com/news/articleView.html?idxno=1021299"
+              >
+                "ERICA 전자공학부 추민성 교수 연구팀, 반도체 설계대전 수상"</a
+              >
+            </h5>
+
+            <h5 class="in-media-item">
+              <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1021190"
               >
                 "추민성 교수, '반도체의 날' 기념식서 한국 반도체협회장상 수상"</a
