--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
             <h5 class="in-media-item">
               <a
-                href="https://www.newshyu.com/news/articleView.html?idxno=1021299"
+                href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer"
               >
                 "ERICA 전자공학부 추민성 교수 연구팀, 반도체 설계대전 수상"</a
               >
