--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
             <h5 class="in-media-item">
               <a
-                href="https://www.newshyu.com/news/articleView.html?idxno=1021190"
+                href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" 
               >
                 "추민성 교수, '반도체의 날' 기념식서 한국 반도체협회장상 수상"</a
               >
@@ -453,7 +453,7 @@
 
             <h5 class="in-media-item">
               <a
-                href="https://www.idec.or.kr/vod/apply/view/?&no=365"
+                href="https://www.idec.or.kr/vod/apply/view/?&no=365" target="_blank" rel="noopener noreferrer"
               >
                 "IDEC 고속 칩렛향 디지털 인터페이스 회로 설계 강좌"</a
               >
@@ -461,7 +461,7 @@
 
             <h5 class="in-media-item">
               <a
-                href="https://www.newshyu.com/news/articleView.html?idxno=1017521"
+                href="https://www.newshyu.com/news/articleView.html?idxno=1017521" target="_blank" rel="noopener noreferrer"
               >
                 "이재건 학생, 국제 메이저 학술대회 ASSCC ‘24에 논문 개제"</a
               >
@@ -469,7 +469,7 @@
 
             <h5 class="in-media-item">
               <a
-                href="https://www.newshyu.com/news/articleView.html?idxno=1008944"
+                href="https://www.newshyu.com/news/articleView.html?idxno=1008944" target="_blank" rel="noopener noreferrer"
               >
                 "학부생 논문이 국제 학술대회에 등재... 전자공학부 학생들의
                 이례적인 성과"</a
@@ -477,7 +477,7 @@
             </h5>
             <h5 class="in-media-item">
               <a
-                href="https://www.youtube.com/watch?v=8XNEn5FGGIY&ab_channel=%EB%8C%80%ED%95%9C%EC%A0%84%EC%9E%90%EA%B3%B5%ED%95%99%ED%9A%8CIEIE-%EA%B3%B5%EC%8B%9D%EC%B1%84%EB%84%90"
+                href="https://www.youtube.com/watch?v=8XNEn5FGGIY&ab_channel=%EB%8C%80%ED%95%9C%EC%A0%84%EC%9E%90%EA%B3%B5%ED%95%99%ED%9A%8CIEIE-%EA%B3%B5%EC%8B%9D%EC%B1%84%EB%84%90" target="_blank" rel="noopener noreferrer"
               >
                 "대한전자공학회 ICT 백과사전 - 통신용 회로 및 시스템 (한양대학교
                 추민성 교수)"</a
