--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
                       <li>[Oct.] We hosted an invited seminar by <b>Prof. Seung-Hyeon Moon</b> on "Two Challenges in AI Accelerators"</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
-                      <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat!</li>
+                      <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer">[LINK]</a></li>
                       <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award!</b></li>
                       <li>[Oct.] <b>Seung-Hwan Gong</b> has been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
                       <li>[Oct.] <b>Dong-Hoe Heo</b> and <b>Seung-Hwan Gong</b> have been awarded <b>ISOCC 2025 Chip Design Contest Special Prize!</b></li>
