--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
                       <li>[Oct.] We hosted an invited seminar by <b>Prof. Seung-Hyeon Moon</b> on "Two Challenges in AI Accelerators"</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
-                      <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                      <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! 
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award!</b></li>
                       <li>[Oct.] <b>Seung-Hwan Gong</b> has been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
                       <li>[Oct.] <b>Dong-Hoe Heo</b> and <b>Seung-Hwan Gong</b> have been awarded <b>ISOCC 2025 Chip Design Contest Special Prize!</b></li>
@@ -305,10 +306,12 @@
                       <li>[Aug.] <b>Prof. Choo</b> has served as the Program Committee at 2025년도 SoC 워크샵 및 산학교류회</li>
                       <li>[Jul.] <b>Prof. Choo</b> has served as the Organizing Committee and Session Chair at 2025 ITC-CSCC</li>
                       <li>[Jul.] <b>Prof. Choo</b> has served as the Program Committee at 2025년 상용반도체개발 기술워크숍</li>
-                      <li>[Jun.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!</li>
+                      <li>[Jun.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
+                          <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li>[Jun.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
                       <li>[May.] <b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
-                      <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!</li>
+                      <li>[May.] Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!
+                          <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li>[May.] <b>Prof. Choo</b> has presented the invited talk <b>"고속 유선통신의 기초"</b> at 2025 아날로그/파워 IC 설계 워크숍</li>
                       <li>[May.] <b>Prof. Choo</b> has served as the Program Committee at 2025 아날로그/파워 IC 설계 워크숍</li>
                       <li>[May.] <b>Prof. Choo</b> has served as the Program Committee at 2025 SoC 학술대회</li>
@@ -328,10 +331,14 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <ul>
-                    <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!</li>
-                    <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>                                    
-                    <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!</li>
-                    <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!</li>
+                    <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
+                        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                    <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
+                    <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!
+                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                    <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                        <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                     <li>[Apr.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
                     <li>[Jan.] <b>Dong-Hoe Heo</b> has been awarded <b>2024 ICEIC Best Paper Award (Gold Prize)</b> Congrat!</li>
                     <li>[Jan.] <b>Prof. Choo</b> has served as the Conference Secretary Chair at 2024 ICEIC</li>
