--- a/index.html
+++ b/index.html
@@ -296,8 +296,10 @@
                       <li>[Oct.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 APCCAS</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ISOCC</li>
-                      <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!</li>                  
-                      <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!</li>
+                      <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
+                      <li>[Sep.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>제26회 대한민국 반도체설계대전 특허청장상</b> Congrat!
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li>[Sep.] <b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>
                       <li>[Sep.] <b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
                       <li>[Aug.] Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
