--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
                   <div class="user-card">
                     <ul>
                     <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
-                        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                        <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                     <li>[Sep.] Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
-                        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
+                        <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
                     <li>[Aug.] Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!
                         <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                     <li>[Jul.] Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
