--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                 <div class="wrapper">
                   <div class="user-card">
                    <ul>
+                      <li>[Nov.] <b>Prof. Min-Seong Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
+                      <li>[Nov.] <b>Prof. Min-Seong Choo</b> has been awarded the <b>IEIE Meritorious Service Award, 대한전자공학회 공로상</b>. Congrat!</li>
+                      <li>[Nov.] <b>Prof. Min-Seong Choo</b> has served as an <b>Organizing Committee member</b> of the <b>IEIE Annual Fall Conference</b>.</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "High-Speed Interface Circuit Design" at the University of Seoul</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon with <b>Seung-Hwan Gong, Jae-Geon Lee, Seung-Mo Jin, and Dong-Ho Kim</b></li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
