--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                 <div class="wrapper">
                   <div class="user-card">
                    <ul>
+                      <li>[Dec.] <b>Prof. Choo</b> has been selected as a recipient of the <b>The Institute of Electronics and Information Engineers Award for Contribution to Semiconductor Development, 공로상</b>. Congrat! 
+                      <li>[Dec.] <b>Prof. Choo</b> has been selected as a recipient of the <b>The Semiconductor Society, 공로상</b>. Congrat!
+                      <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 대한전자공학회 추계학술대회</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "High-Speed Interface Circuit Design" at the University of Seoul</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon with <b>Seung-Hwan Gong, Jae-Geon Lee, Seung-Mo Jin, and Dong-Ho Kim</b></li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
