--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
               </div>                         
             </div>                
                 <hr /> 
-            <div class="accordion">
+            <div class="accordion start-closed">
               <h3 class="h3-items" id="2023">2023</h3>   
               <div>
                 <div class="wrapper">
@@ -368,7 +368,7 @@
               </div>                         
             </div>                        
                 <hr />
-            <div class="accordion">
+            <div class="accordion start-closed">
               <h3 class="h3-items" id="2022">2022</h3>   
               <div>
                 <div class="wrapper">
