--- a/index.html
+++ b/index.html
@@ -283,8 +283,11 @@
                 <div class="wrapper">
                   <div class="user-card">
                    <ul>
-                      <li>[Nov.] <b>Prof. Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
-                      <li>[Nov.] <b>Prof. Choo</b> has been awarded the <b>IEIE Meritorious Service Award, 대한전자공학회 공로상</b>. Congrat!</li>
+                      <li>[Dec.] <b>Jae-Geon Lee</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> Congrat!</li>                    
+                      <li>[Dec.] <b>Dong-Ho Kim</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> Congrat!</li>                    
+                      <li>[Dec.] <b>Seung-Hwan Gong</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> Congrat!</li>
+                      <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
+                      <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Meritorious Service Award, 대한전자공학회 공로상</b>. Congrat!</li>
                       <li>[Nov.] <b>Prof. Choo</b> has served as an <b>Organizing Committee member</b> of the <b>IEIE Annual Fall Conference</b>.</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "High-Speed Interface Circuit Design" at the University of Seoul</li>
                       <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon with <b>Seung-Hwan Gong, Jae-Geon Lee, Seung-Mo Jin, and Dong-Ho Kim</b></li>
@@ -293,10 +296,10 @@
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
                       <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! 
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award!</b></li>
-                      <li>[Oct.] <b>Seung-Hwan Gong</b> has been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
-                      <li>[Oct.] <b>Dong-Hoe Heo</b> and <b>Seung-Hwan Gong</b> have been awarded <b>ISOCC 2025 Chip Design Contest Special Prize!</b></li>
-                      <li>[Oct.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award!</b></li>
+                      <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award.</b> Congrat!</li>
+                      <li>[Oct.] <b>Seung-Hwan Gong</b> has been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award.</b> Congrat!</li>
+                      <li>[Oct.] <b>Dong-Hoe Heo</b> and <b>Seung-Hwan Gong</b> have been awarded <b>ISOCC 2025 Chip Design Contest Special Prize.</b> Congrat!</li>
+                      <li>[Oct.] <b>Seung-Mo Jin</b> and <b>Dong-Ho Kim</b> have been awarded <b>ISOCC 2025 SSCS Seoul Chapter Best Paper Award.</b> Congrat!</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 APCCAS</li>
                       <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ISOCC</li>
                       <li>[Sep.] <b>Dong-Hyun Lee</b> and <b>Shin-Uk Kang</b> have been awarded <b>제26회 대한민국 반도체설계대전 기업특별상 (바움디자인시스템즈)</b> Congrat!
